# serializer

./: CMakeLists.txt  README.md
ArgParser/: CMakeLists.txt
ArgParser/include/: ArgParser.h  ArgTypes.h
ArgParser/src/: ArgParser.cpp  ArgTypes.cpp
cmake/: CompilerFlags.cmake
json/: CMakeLists.txt
main/: main.cpp
serializer/: CMakeLists.txt
serializer/include/: Serialization.h  Serialization.hpp
shm_queue/: CMakeLists.txt
shm_queue/include/: shm_queue.h  shm_queue_data.h  shm_queue_linux.h  shm_queue_win.h
shm_queue/main/: mainConsumer.cpp
shm_queue/src/: consumer_linux.cpp  consumer_win.cpp  producer_linux.cpp  producer_win.cpp
tests/: CMakeLists.txt  tests.cpp
utils/: CMakeLists.txt
utils/include/: bi_unordered_map.h  utils.h
